--- a/res/layout/about.xml
+++ b/res/layout/about.xml
@@ -101,7 +101,7 @@
                     android:paddingLeft="10.0dip"
                     android:paddingRight="10.0dip"
                     android:singleLine="true"
-                    android:text="way" />
+                    android:text="X-Chat" />
             </LinearLayout>
 
             <LinearLayout
@@ -140,7 +140,7 @@
                     android:paddingLeft="10.0dip"
                     android:paddingRight="10.0dip"
                     android:singleLine="true"
-                    android:text="way.ping.li@gmail.com" />
+                    android:text="liangxueping@qq.com" />
             </LinearLayout>
 
             <TextView
